--- a/jest.config.json
+++ b/jest.config.json
@@ -5,5 +5,8 @@
     "snapshotSerializers": [
         "enzyme-to-json/serializer"
     ],
-    "collectCoverage": true
+    "collectCoverage": true,
+    "moduleNameMapper": {
+        "\\.(css|scss)$": "<rootDir>/__mocks__/styleMock.js"
+    }
 }
