--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chai": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.4"
+    "enzyme-to-json": "^3.4.4",
+    "isomorphic-fetch": "^2.2.1"
   }
 }
